syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package Intechnity.CryptoDemo.Domain.Protos;

service P2PNode {
	rpc Connect (ConnectMessage) returns (ConnectMessage);

	rpc SyncStatus (SyncStatusRequest) returns (SyncStatusResponse);
	rpc DownloadBlocks (DownloadBlocksRequest) returns (DownloadBlocksResponse);

	rpc OnNewTransaction (OnNewTransactionRequest) returns (google.protobuf.Empty);
	rpc OnNewBlockMinted (OnNewBlockMintedRequest) returns (google.protobuf.Empty);
}

message ConnectMessage {
	repeated string known_peers = 1;
	int32 listen_port = 2;
}

message SyncStatusRequest {
	repeated string known_peers = 1;
}

message SyncStatusResponse {
	int64 no_of_blocks = 1;
	double sum_of_difficulty = 2;
	repeated ProtoTransaction unconfirmed_transactions = 3;
	repeated string known_peers = 4;
}

message OnNewTransactionRequest {
	repeated ProtoTransaction transactions = 1;
}

message OnNewBlockMintedRequest {
	ProtoBlock new_block = 1;
}

message DownloadBlocksRequest {
	int64 from_block = 1;
	int64 to_block = 2;
}

message DownloadBlocksResponse {
	repeated ProtoBlock blocks = 1;
}

message ProtoBlock {
	string blockchain_id = 1;
	string version = 2;
	int64 index = 3;
	google.protobuf.Timestamp timestamp = 4;
	repeated ProtoTransaction transactions = 5;
	string minting_difficulty = 6;
	string minter_address = 7;
	string previous_hash = 8;
	string hash = 9;
}

message ProtoTransaction {
	repeated ProtoTransactionInput transaction_inputs = 1;
	repeated ProtoTransactionOutput transaction_outputs = 2;
	string transaction_id = 3;
}

message ProtoTransactionInput {
	string from_address = 1;
	string previous_transaction_id = 2;
	int64 previous_block_index = 3;
	string signature = 4;
}

message ProtoTransactionOutput {
	string address = 1;
	string amount = 2;
	bool is_coinbase_transaction = 3;
}